# pytorch-android

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/assets/: resnet18_predict_net_v1.pb  squeeze_predict_net_v1.pb
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/ATen/: CPUByteType.h  CPUCharType.h  CPUDoubleType.h  CPUFloatType.h  CPUIntType.h  CPULongType.h  CPUShortType.h  CUDAByteType.h  CUDACharType.h  CUDADoubleType.h  CUDAFloatType.h  CUDAHalfType.h  CUDAIntType.h  CUDALongType.h  CUDAShortType.h  Context.h  Functions.h  NativeFunctions.h  TypeDefault.h  TypeExtendedInterface.h
app/src/main/cpp/c10/macros/: cmake_macros.h
app/src/main/cpp/caffe2/core/: macros.h
app/src/main/cpp/caffe2/proto/: caffe2.pb.h  caffe2_legacy.pb.h  hsm.pb.h  metanet.pb.h  predictor_consts.pb.h  prof_dag.pb.h  torch.pb.h
app/src/main/cpp/onnx/: onnx-operators.pb.h  onnx-operators_onnx_c2.pb.h  onnx-operators_onnx_torch.pb.h  onnx.pb.h  onnx_onnx_c2.pb.h  onnx_onnx_torch.pb.h
app/src/main/java/facebook/f8demo/: ClassifyCamera.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
